enforce async method naming

--- a/.editorconfig
+++ b/.editorconfig
@@ -96,6 +96,26 @@ csharp_style_throw_expression = true:suggestion
 csharp_style_conditional_delegate_call = true:suggestion
 # Modifier preferences
 csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:suggestion
+#### Naming styles ####
+
+# Naming rules
+
+dotnet_naming_rule.suffix_async_should_be_asyncsuffix.severity = error #suggestion
+dotnet_naming_rule.suffix_async_should_be_asyncsuffix.symbols = suffix_async
+dotnet_naming_rule.suffix_async_should_be_asyncsuffix.style = asyncsuffix
+
+# Symbol specifications
+
+dotnet_naming_symbols.suffix_async.applicable_kinds = method
+dotnet_naming_symbols.suffix_async.applicable_accessibilities = *
+dotnet_naming_symbols.suffix_async.required_modifiers = async
+
+# Naming styles
+
+dotnet_naming_style.asyncsuffix.required_prefix = 
+dotnet_naming_style.asyncsuffix.required_suffix = Async
+dotnet_naming_style.asyncsuffix.word_separator = 
+dotnet_naming_style.asyncsuffix.capitalization = pascal_case
 # Expression-level preferences
 csharp_prefer_braces = true:silent
 csharp_style_deconstructed_variable_declaration = true:suggestion
